# acc

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  main.c  xmake.lua
config/: noreturn.h.in
include/: acir.h  ast.h  cg.h  data.h  defs.h  expr.h  fatals.h  ir.h  noreturn.h  parse.h  print_ast.h  quad.h  scan.h  symbol.h  target.h  token.h  vtype.h
include/util/: array.h  critbit.h  hashmap.h  linklist.h  misc.h
native/standalone/: stdbool.h  stdnoreturn.h
src/: acir.c  ast.c  cg.c  cg_ast.c  cg_llvm.c  cg_x64.c  expr.c  fatals.c  parse.c  print_ast.c  quad.c  scan.c  symbol.c  target.c  token.c  vtype.c
src/util/: array.c  critbit.c  linklist.c  misc.c
tests/: input01  input02  input03  input04  input05  input08  test_llvm.lua  test_llvm.sh  test_x64.sh
tests/valid/: nested_ops_2.c
tools/: autotest.bash  test_llvm.bash  test_x64.bash
