CMAKE_MINIMUM_REQUIRED(VERSION 3.12)

PROJECT(acc LANGUAGES C)

SET(CMAKE_C_STANDARD 11)
SET(CMAKE_C_STANDARD_REQUIRED True)

INCLUDE(CheckIncludeFile)
CHECK_INCLUDE_FILE(stdnoreturn.h HAS_NORETURN_H)
IF(HAS_NORETURN_H)
	SET(HAS_NORETURN_H 1)
ELSE()
	SET(HAS_NORETURN_H 0)
ENDIF()

CONFIGURE_FILE(${PROJECT_SOURCE_DIR}/config/noreturn.h.in ${PROJECT_SOURCE_DIR}/config/noreturn.h)

FILE(GLOB SRC_LIST 
	${PROJECT_SOURCE_DIR}/main.c
	${PROJECT_SOURCE_DIR}/src/*.c
	${PROJECT_SOURCE_DIR}/src/util/*.c
)

INCLUDE_DIRECTORIES(
    ${PROJECT_SOURCE_DIR}/include/
    ${PROJECT_SOURCE_DIR}/config/
)

ADD_EXECUTABLE(acc ${SRC_LIST})
